fixes the height issue on iphone x

--- a/src/swipe_board/swipe_board.scss
+++ b/src/swipe_board/swipe_board.scss
@@ -20,7 +20,6 @@
         width: 100%;
         max-width: 500px;
         height: 100%;
-        max-height: 700px;
         position: absolute;
         border-radius: 10px;
         background-color: white;
